--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,6 +16,7 @@ endif()
 
 # Options.
 include(CMakeDependentOption)
+option(ENABLE_SERVER "Enable building the C++ server." On)
 option(ENABLE_JS "Enable Javascript stuff (e.g: the client library and demo client)." On)
 cmake_dependent_option(JS_DEV "Build the Javascript stuff in development mode rather than production mode."
         ${DEBUG_ON_OFF} ENABLE_JS Off)
