--- a/demo-client/package.json
+++ b/demo-client/package.json
@@ -33,13 +33,15 @@
     "react": "^18.2.0",
     "react-app-rewired": "^2.2.1",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
     "typescript": "=4.7.3",
     "ts-patch": "^2.1.0",
-    "react-router-dom": "^6.10.0"
+    "react-syntax-highlighter": "^15.5.0"
   },
   "devDependencies": {
-    "sass": "^1.60.0"
+    "sass": "^1.60.0",
+    "@types/react-syntax-highlighter": "^15.5.6"
   },
   "homepage": "."
 }
