--- a/demo-client/package.json
+++ b/demo-client/package.json
@@ -35,13 +35,14 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
+    "react-syntax-highlighter": "^15.5.0",
     "typescript": "=4.7.3",
     "ts-patch": "^2.1.0",
-    "react-syntax-highlighter": "^15.5.0"
+    "@fontsource/montserrat": "^4.5.14"
   },
   "devDependencies": {
-    "sass": "^1.60.0",
-    "@types/react-syntax-highlighter": "^15.5.6"
+    "@types/react-syntax-highlighter": "^15.5.6",
+    "sass": "^1.60.0"
   },
   "homepage": "."
 }
