Fix yarn checksums

--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,6 +1,7 @@
 nmHoistingLimits: workspaces
 
 nodeLinker: node-modules
+checksumBehavior: update
 
 plugins:
   - path: .yarn/plugins/@yarnpkg/plugin-workspace-tools.cjs
