--- a/demo-client/package.json
+++ b/demo-client/package.json
@@ -25,6 +25,7 @@
     ]
   },
   "dependencies": {
+    "@fontsource/montserrat": "^4.5.14",
     "@types/node": "^17.0.34",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
@@ -36,9 +37,8 @@
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
     "react-syntax-highlighter": "^15.5.0",
-    "typescript": "=4.7.3",
     "ts-patch": "^2.1.0",
-    "@fontsource/montserrat": "^4.5.14"
+    "typescript": "=4.7.3"
   },
   "devDependencies": {
     "@types/react-syntax-highlighter": "^15.5.6",
