--- a/client/package.json
+++ b/client/package.json
@@ -32,6 +32,8 @@
     "@babel/preset-env": "^7.17.10",
     "@ckitching/typescript-is": "^0.1.21",
     "babel-loader": "^8.2.5",
+    "es-abstract": "^1.21.2",
+    "is-typed-array": "^1.1.10",
     "live-video-streamer-common": "workspace:^",
     "ts-loader": "^9.3.0",
     "ts-patch": "^2.0.1",
