--- a/demo-client/package.json
+++ b/demo-client/package.json
@@ -29,6 +29,7 @@
     "@types/node": "^17.0.34",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "chart.js": "^4.2.1",
     "dotenv": "^16.0.1",
     "live-video-streamer-client": "workspace:^",
     "react": "^18.2.0",
