Add a script for building an ffmpeg with the features required by the server

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,6 +28,7 @@ if ("${CMAKE_BUILD_TYPE}" STREQUAL "Release")
 endif()
 
 # Sub-projects.
+add_subdirectory(ffmpeg-tools)
 add_subdirectory(server)
 
 # Documentation.
