--- a/demo-client/tsconfig.json
+++ b/demo-client/tsconfig.json
@@ -11,5 +11,11 @@
     "resolveJsonModule": true,
     "isolatedModules": true
   },
-  "include": ["src"]
+  "include": ["src"],
+  "exclude": ["node_modules"],
+  "references": [
+    {
+        "path": "../client"
+    }
+  ]
 }
