[JS-Common] Build for the browser since it's always used there now

--- a/common/tsconfig.json
+++ b/common/tsconfig.json
@@ -2,7 +2,11 @@
   "extends": "../tsconfig.json",
   "compilerOptions": {
     "outDir": "./build",
-    "lib": ["ESNext"],
+    "lib": [
+      "dom",
+      "dom.iterable",
+      "esnext"
+    ],
     "types": ["node"],
     "composite": true,
     "declarationMap": true,
