--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "docs/xcmake"]
+[submodule "xcmake"]
 	path = xcmake
-	url = ../../build-tools/xcmake.git
+	url = git@github.com:spectral-compute/xcmake.git
